--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <title>Task Management App</title>
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
   </head>
   <body>
-    <div id="app">
-      {{ message }}
+    <div id="app" class="pushable">
+      <div class="ui sidebar inverted vertical menu">
+        Task Manager
+      </div>
+      <div class="ui container">
+        {{ message }}
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
