--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
                   todoTasks.length
                 }})
               </div>
-              <div v-for="task in todoTasks">
+              <div
+                class="ui segment task"
+                v-bind:class="task.completed? 'done' : 'todo'"
+                v-for="task in todoTasks"
+              >
                 {{ task.id }} {{ task.name }}: {{ task.description }} completed?
                 {{ task.completed }}
               </div>
@@ -44,7 +48,11 @@
                     completedTasks.length
                   }})
                 </div>
-                <div v-for="task in completedTasks">
+                <div
+                  class="ui segment task"
+                  v-bind:class="task.completed? 'done' : 'todo'"
+                  v-for="task in completedTasks"
+                >
                   {{ task.id }} {{ task.name }}:
                   {{ task.description }} completed?
                   {{ task.completed }}
