--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
                     completedTasks.length
                   }})
                 </div>
-              <task v-bind:task="task" v-for="task in completedTasks" />
+                <task 
+                  v-bind:task="task" 
+                  v-for="task in completedTasks" 
+                />
               </div>
             </div>
           </div>
