--- a/index.html
+++ b/index.html
@@ -56,7 +56,26 @@
                 </div>
               </div>
               <div class="ui segment">
-                <form class="ui form">
+                <form class="ui form" v-on:submit="updateTask($event, task.id)">
+
+                  <input type="hidden" name="id" v-model="task.id" />
+
+                  <div class="field">
+                    <label>Name</label>
+                    <input type="text" name="name" placeholder="Name" required="true" v-model="task.name" />
+                  </div>
+                  <div class="field">
+                    <label>Description</label>
+                    <input type="text" name="name" placeholder="Description" required="true" v-model="task.description" />
+                  </div>
+                  <div class="field inline">
+                    <label>Completed</label>
+                    <input type="checkbox" name="completed" v-model="task.completed" />
+                  </div>
+
+                  <button class="ui button green" type="submit" v-on:click="updateTask($event, task.id)">
+                    Update
+                  </button>
                 </form>
               </div>
             </div>
