--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <input type="checkbox" name="completed" v-model="task.completed" />
                   </div>
 
-                  <button class="ui button green" type="submit" v-if="action== 'create'" v-on:click="updateTask($event, task.id)">
+                  <button class="ui button green" type="submit" v-if="action== 'create'" v-on:click="createTask($event, task.id)">
                     Create
                   </button>
 
