--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </div>
               </div>
               <div class="ui segment">
-                <form class="ui form" v-on:submit="updateTask($event, task.id)">
-
+                <form class="ui form" 
+                      v-on:submit.prevent="(action == 'create') ? createTask($event) : updateTask($event, task.id)" 
+                      v-on:submit="updateTask($event, task.id)">
                   <input type="hidden" name="id" v-model="task.id" />
-
                   <div class="field">
                     <label>Name</label>
                     <input type="text" name="name" placeholder="Name" required="true" v-model="task.name" />
@@ -80,14 +80,10 @@
                     <label>Completed</label>
                     <input type="checkbox" name="completed" v-model="task.completed" />
                   </div>
-
-                  <button class="ui button green" type="submit" v-if="action== 'create'" v-on:click="createTask($event, task.id)">
-                    Create
+                  <button class="ui button green" type="submit">
+                    Submit
                   </button>
 
-                  <button class="ui button blue" type="submit" v-if="action== 'edit'" v-on:click="updateTask($event, task.id)">
-                    Update
-                  </button>
                 </form>
               </div>
             </div>
